test refactor